<resources>
      <string name="app_name">Player</string>
    <string name="stream">Поток</string>
    <string name="raw">Память устройства</string>
    <string name="pause">ПАУЗА</string>
    <string name="resume">ПУСК</string>
    <string name="stop">СТОП</string>
    <string name="loop">ПОВТОР</string>
    <string name="backward">НАЗАД</string>
    <string name="forward">ВПЕРЁД</string>
    <string name="info">ИНФОРМАЦИЯ</string>
    <string name="phone">ТЕЛЕФОН</string>
    <string name="minus">ГРОМКОСТЬ -</string>
    <string name="plus">ГРОМКОСТЬ +</string>
</resources>
