<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="ПРИЛОЖЕНИЕ ПЛЕЕР"
        android:textColor="#091E97"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOut"
        android:layout_width="399dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="#ECF3FA"
        android:gravity="center"
        android:hint="Название мелодии"
        android:textColor="#0E379E"
        android:textColorHint="#1460BD"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="382dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOut">

        <Button
            android:id="@+id/btnResume"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#6678EC"
            android:onClick="onClick"
            android:padding="14dp"
            android:text="@string/resume" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#6678EC"
            android:onClick="onClick"
            android:padding="14dp"
            android:text="@string/pause" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#5468ED"
            android:onClick="onClick"
            android:padding="14dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3248D6"
            android:onClick="onClick"
            android:padding="14dp"
            android:text="@string/backward" />

        <Button
            android:id="@+id/btnForward"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3248D6"
            android:onClick="onClick"
            android:padding="14dp"
            android:text="@string/forward" />

        <Switch
            android:id="@+id/switchLoop"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#AFC8F1"
            android:padding="14dp"
            android:text="@string/loop"
            android:textColor="#091E97"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="ИСТОЧНИК"
        android:textColor="#091E97"
        android:textSize="19sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <Button
            android:id="@+id/btnRAW"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#CED4F3"
            android:onClick="onClickSource"
            android:text="@string/phone"
            android:textColor="#091E97"
            android:textSize="14sp"
            android:textStyle="italic" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>